--- a/css/test1.css
+++ b/css/test1.css
@@ -18,7 +18,17 @@ p{
     animation:d 5s infinite;
 }
 #center{
+    height: 1800px;
     text-align:center;
+    background-image: url("../jpg/test2.jpg");
+    background-size: cover;
+}
+.cycle {
+    float: left;
+    margin: 5px;
+    padding: 15px;
+    width: 300px;
+    height: 300px;
 }
 
 @keyframes a {
